$Id: History,v 1.13 2000-11-08 14:55:01 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
08 Nov 00 mma (stand-V02-00-03)
-  eBrem
   07/08/00  new cross section/en.loss parametrisation, LPM flag , L.Urban
   21/09/00  corrections in the LPM implementation, L.Urban   
-  30/10/00  signature in GetLossWithFluct changed L.Urban

01 Nov 00 G.Cosmo (stand-V02-00-02)
-  Removed useless dependencies from GNUmakefile.
-  G4SynchrotronRadiation: added "const" qualifier to usage of
   const G4Field*. Co-works with tag "field-V02-00-00" and related ones
   from geometry.

11 Aug 00 mma
   tag stand-V02-00-01     

10 Aug 00 V.Ivanchenko
-  Change G4VhEnergyLoss.cc, G4VhEnergyLoss.hh, G4hIonisation.cc 
   in order to simulate energy losses of ions; correction to
   cross section for particles with spin 1 is inserted as well.
   Class G4ionIonisation is removed. 

03 Aug 00 Gabriele Cosmo
- Fixes for events' reproducibility:
  o G4GammaConversion.cc: changed usage of RandFlat::shootBit() to
    RandBit::shootBit().
  o G4VIeEnergyLoss.cc, G4VIhEnergyLoss.cc, G4PAIxSectionTest.cc:
    changed RandGauss to G4RandGauss.

31 Jul 00 Gonzalo Gracia